--- a/CursoNextJS/package.json
+++ b/CursoNextJS/package.json
@@ -14,6 +14,8 @@
 	"dependencies": {
 		"isomorphic-fetch": "^2.2.1",
 		"next": "^9.4.2",
+		"next-routes": "^1.4.2",
+		"nprogress": "^0.2.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1"
 	}
