--- a/BackendConNode/movies-api.js/package.json
+++ b/BackendConNode/movies-api.js/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "moment": "^2.27.0"
+    "moment": "^2.27.0",
+    "mongodb": "^3.5.9"
   },
   "devDependencies": {
     "eslint": "^7.3.1",
