--- a/BackendConNode/movies-api.js/package.json
+++ b/BackendConNode/movies-api.js/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "set DEBUG=app:*&& nodemon index",
     "start": "SET NODE_ENV=production node index",
-    "test": "mocha --exit"
+    "test": "mocha --exit",
+    "cover": "nyc npm run test",
+    "report": "nyc report --report=html && open coverage/index.html"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +29,7 @@
     "lint-staged": "^10.2.11",
     "mocha": "^8.0.1",
     "nodemon": "^2.0.4",
+    "nyc": "^15.1.0",
     "prettier": "^2.0.5",
     "proxyquire": "^2.1.3",
     "sinon": "^9.0.2",
@@ -39,5 +42,9 @@
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
+  },
+  "nyc": {
+    "all" : true,
+    "include": ["routes", "services", "lib", "utils"]
   }
 }
