--- a/CursoGraphQL/package.json
+++ b/CursoGraphQL/package.json
@@ -13,10 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.3.0",
-    "graphql-tools": "^6.0.18"
+    "graphql-tools": "^6.0.18",
+    "mongo": "^0.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
