--- a/CursoGraphQL/package.json
+++ b/CursoGraphQL/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "SET NODE_ENV=production & node index",
     "dev": "nodemon -e js,graphql index",
     "lint": "standard",
     "lint-fix": "standard --fix"
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
